# Rust_engine_template_01

./: Cargo.toml  REORGANIZATION.md  build.rs  buildlog.txt  migrate.sh
.github/workflows/: ci.yml
.spyproject/config/backups/: workspace.ini.bak
assets/config/: world_gen_tuning.example.json
assets/config/power/: plant_definitions.json
assets/config/terrain/: README.md  material_registry.example.json  material_rules.example.ron  mobility_profiles.example.ron  tag_registry.example.json  terrain_family_registry.example.json
assets/configs/buildings/: _building_types_index.json  concrete_basic_production_plant.json
assets/configs/production/: production_configs.data
assets/configs/rails/: example_rail_track_v1.json
assets/configs/roads/: example_road_segment_v1.json
assets/configs/vehicles/: civ_truck_template.json  vehicle_configs.json
assets/data/: log.html
assets/game_entities/: consts_for_entities.const
assets/shaders/: weather_fire_field.wgsl
assets/test_fixtures/transport/: network_chain_v1.json  network_fork_v1.json
assets/tiled/: base.tsx  base_01.world  bease_01.tmx  rails.tsx  rails2.tsx  tes_101.tiled-session  test_card.tmx  tiled_project_files.tiled-session  ural.tiled-session
assets/tiled/ural/: road.tsx  road2.tsx  roadtest.tiled-session  ural.tiled-session
debug_runs/: world_gen_1777672119_Preview.json  world_gen_1777672336_Preview.json  world_gen_1777672442_Preview.json  world_gen_1777673214_Preview.json  world_gen_1777673293_Preview.json  world_gen_1777673443_Preview.json  world_gen_1778120040_Preview.json  world_gen_1778120206_Preview.json  world_gen_1778120779_Full.json  world_gen_1778279645_Preview.json
prompts/: INDEX.md  README.md  implementation_plan_v1.md  llm_agent_brief.md
prompts/designer_questions/: README.md
prompts/designer_questions/_legacy/: README.md  _legacy_designer_questions_v1.md
prompts/designer_questions/factions/: README.md  diplomacy_bargaining_reference_outline_v1.md  faction_editor_tooling_matrix_v1.md  implementation_questions_v1.md
prompts/designer_questions/map_editor/: m1_execution_questions_v1.md
prompts/guides/: INVENTORY.md  README.md  ai_city_planning_runbook_v1.md  ai_operational_warfare_runbook_v1.md  asset_system_audit_runbook_v1.md  backlog_serialization_preview_streaming_runbook_v1.md  base_ai_runbook_draft.md  base_doctrine_thoery.md  base_reserch_draft.md  base_ui_direction_principls.md  basic_nav_outline.md  bevy_asset_terrain_runbook_v1.md  camera_map_navigation_runbook_v1.md  chunk_scheduler_runbook_v1.md  concrete_industry_sim_runbook_v1.md  developer_reflective_brief_v1.md  developer_reflective_brief_v1.plan.md  doctrine_simulation_alignment_runbook_v1.md  ecs_systems_schedule_runbook_v1.md  engine_architecture_human_map_v1.md  experience_layer_orchestrator_v1.md  fire_ecology_simulation_runbook_v1.md  flora_ecology_runbook_v1.md  gap_remediation_runbook_v1.md  gui_runbook_v1.md  hybred_road_stats.md  implementation_gap_hunt_runbook_v1.md  infrastructure_and_research_orchestrator_v1.md  infrastructure_construction_runbook_v1.md  infrastructure_corridor_runbook_v1.md  infrastructure_environment_integration_v1.md  infrastructure_resilience_and_failure_runbook_v1.md  intersection_road.md  lan level traffic.idea.md  logistics_ai_runbook_v1.md  map_editor_runbook_v1.md  new_propsal_guide_may202608.md  petroleum_industry_simulation_runbook_v1.md  python_asset_tools_alignment_runbook_v1.md  ref_buildout_roads.md  (+18 more)
prompts/legacy_runbooks/: README.md
prompts/matrix/: README.md
schemas/flatbuffers/: entity_01.fbs  power_01.fbs  production_01.fbs  skrukturave_01.fbs
src/: README.md  idgen.rs  lib.rs  main.rs
src/bevysubengines/: mod.rs  world_generator_plugin.rs
src/core/: id_generator.rs  mod.rs
src/engine/: engine.rs  engine_with_worldgen.rs  launch_args.rs  mod.rs  sets.rs  states.rs  test_harness.rs  transitions.rs
src/engine/lmodels/: mod.rs
src/entities/: Untitled  components.rs  damages.rs  entity.rs  mod.rs  prelude.rs  types.rs  types_aliases.rs  types_of.rs
src/events/: mod.rs  ownership_events.rs
src/gui/: agent_permissions_ui.rs  app_shell.rs  diagnostics_ui.rs  faction_tools_ui.rs  gui_assets.rs  gui_sets.rs  hud_quick_menu.rs  in_game_hud.rs  in_game_ui.rs  input_bindings.rs  logistics_focus.rs  logistics_targets_panel.rs  main_menu.rs  map_camera.rs  mod.rs  options_keybindings_ui.rs  splash.rs  ui_gates.rs  ui_windows.rs
src/io/: mod.rs
src/render/: gpu_weather_fire_field.rs  light.rs  mod.rs  tilemap_adapter.rs
src/strategic/: logistics_net.rs  mod.rs  plugin.rs
src/systems/: chunk_environment_persist.rs  chunk_environment_set.rs  chunk_sim_lod.rs  mod.rs  sim_control.rs
src/terrain/: bevy_terrain.rs  biome.rs  dynamic_overlay.rs  ecology.rs  family.rs  locational.rs  mod.rs  tiles.rs  tools.rs  voronoi.rs  voronoi_enhanced.rs  world.rs
src/traits/: buildings.rs  damage.rs  mask.rs  mod.rs  region.rs  vehicles.rs
src/utils/: events.rs  mod.rs
utils/: gen_plant_definitions_json.py  world_generator_tool.py
utils/asset_tools/: README.md  run.py
utils/loseutilz/: pythonscsnipz.py
utils/tilemapgen/: Cargo.toml
(+312 files in other folders)
