[package]
name = "proc_A_dine01"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
# Optional research / ML prototypes (`engine/lmodels/*`); not part of the default game build boundary.
research_lmodels = []
# `legacy_io_templates` removed 2026-04-26: src/io/templates.rs retired.

[package.metadata.'cargo-features']
glob = ["*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
reqwest = { version = "0.11", features = ["json"] }

# --- Bevy and UI (Bevy 0.18 line) ---
# Pin companions from https://github.com/vladbat00/bevy_egui compatibility table at lock time.
bevy = "0.18"
bevy_egui = "0.39"
# Optional: re-add bevy-inspector-egui when a release matches this Bevy line without duplicating ECS.
# bevy-inspector-egui = "…"
# egui is provided transitively by bevy_egui unless you pin it explicitly.

# --- World generation ---
noise = "0.8.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
nalgebra = "0.32.2"

# Removed from previous Cargo.toml (incompatible with wgpu / Bevy architecture):
#   imgui      — OpenGL ImGui; replaced by bevy_egui
#   glfw       — OpenGL windowing; Bevy owns the window via winit
#   glm        — OpenGL math; use bevy::math / glam
#   gl         — OpenGL bindings; Bevy uses wgpu
#   glow       — OpenGL bindings; conflicts with wgpu
#   bevy_puffin — profiling plugin pinned to old Bevy; re-add when a compatible release exists

[profile.dev.package."*"]
opt-level = 3
