[package]
name = "proc_A_dine01"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
# Optional research / ML prototypes (`engine::lmodels`); **stub only** — linfa crates are declared for
# future wiring; `cargo build --features research_lmodels` prints a `build.rs` warning. See module docs.
research_lmodels = [
    "dep:linfa",
    "dep:linfa-clustering",
    "dep:linfa-nn",
    "dep:linfa-ica",
    "dep:linfa-kernel",
]
# U6: `bevy_ecs_tilemap` with **render disabled** — headless-safe ECS + `TileTextureIndex` sync only.
bevy_tilemap_adapter = ["dep:bevy_ecs_tilemap"]
# U7: rule-trace component + materialize tracing (no extra deps).
dev_tools = []
# `legacy_io_templates` removed 2026-04-26: src/io/templates.rs retired.

[package.metadata.'cargo-features']
glob = ["*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
ron = "0.8"
reqwest = { version = "0.11", features = ["json"] }

# --- Bevy and UI (Bevy 0.18 line) ---
# Pin companions from https://github.com/vladbat00/bevy_egui compatibility table at lock time.
bevy = { version = "0.18", features = ["serialize"] }
bevy_egui = "0.39"
clap = { version = "4", features = ["derive"] }
# Optional: re-add bevy-inspector-egui when a release matches this Bevy line without duplicating ECS.
# bevy-inspector-egui = "…"
# egui is provided transitively by bevy_egui unless you pin it explicitly.

# --- World generation ---
noise = "0.8.2"
rayon = "1.10"
rand = "0.8.5"
rand_chacha = "0.3.1"
nalgebra = "0.32.2"
bevy_ecs_tilemap = { version = "0.18.1", optional = true, default-features = false }

# Optional linfa stack for `research_lmodels` — **not integrated** in `engine::lmodels` yet (stub module).
linfa = { version = "0.8.1", optional = true, default-features = false }
linfa-clustering = { version = "0.8.1", optional = true, default-features = false }
linfa-nn = { version = "0.8.1", optional = true, default-features = false }
linfa-ica = { version = "0.8.1", optional = true, default-features = false }
linfa-kernel = { version = "0.8.1", optional = true, default-features = false }

# Removed from previous Cargo.toml (incompatible with wgpu / Bevy architecture):
#   imgui      — OpenGL ImGui; replaced by bevy_egui
#   glfw       — OpenGL windowing; Bevy owns the window via winit
#   glm        — OpenGL math; use bevy::math / glam
#   gl         — OpenGL bindings; Bevy uses wgpu
#   glow       — OpenGL bindings; conflicts with wgpu
#   bevy_puffin — profiling plugin pinned to old Bevy; re-add when a compatible release exists

[profile.dev.package."*"]
opt-level = 3
